--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,9 @@
 {
     "name":"PheRum/phpQuery",
     "type":"library",
-    "description":"PHP5.3+ namespaced version of phpQuery with enhanced CSS support",
+    "description":"phpQuery",
     "version":"0.9.6",
-    "keywords":[
-        
-    ],
+    "keywords":[],
     "homepage":"http://code.google.com/p/phpquery/",
     "license":"MIT",
     "authors":[
@@ -24,13 +22,7 @@
             "role":"Packager"
         }
     ],
-    "require":{
-        "php":">=5.4",
-        "sabberworm/php-css-parser":"5.1.*"
-    },
     "autoload":{
-        "psr-4":{
-            "PhpQuery\\": "src/"
-        }
+        "classmap": ["phpQuery/"]
     }
 }
